syntax="proto3";

//option go_package="sami/rt0805/client/device_grpc";
option go_package="sami/rt0805/server/device_grpc";

// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

// package helloworld;

message Operation {
    enum OperationType {
        CREATE = 0;
        UPDATE = 1;
        DELETE = 2;
    }

    OperationType type = 1;
    bool has_succeeded = 2;
}

message DeviceData {
    string device_name = 1;
    repeated Operation operations = 2;
    int32 num_operations = 3;
    int32 num_errors = 4;
}

service DeviceService {
    rpc SendDeviceData (stream DeviceData) returns (SendResponse) {}
}

message SendResponse {
    string message = 1;
}


// // The greeting service definition.
// service Greeter {
//     // Sends a greeting
//     rpc SayHello (HelloRequest) returns (HelloReply) {}
//   }
  
//   // The request message containing the user's name.
//   message HelloRequest {
//     string name = 1;
//   }
  
//   // The response message containing the greetings
//   message HelloReply {
//     string message = 1;
//   }